Refactor documentation and legacy plotting references
- Updated ADR-019 to adopt a layered coverage policy with numeric targets and risk-based exceptions, clarifying OSS contribution handling.
- Deprecated ADR-024 and ADR-025, replacing them with a maintenance reference for legacy plotting contracts and rendering semantics.
- Revised v0.10.1 plan to focus on payload schema confirmation and legacy plotting maintenance, removing outdated ADR gaps.
- Introduced a new maintenance document for legacy plotting, summarizing input contracts and rendering semantics for future reference.
- Updated index to include the new maintenance reference for easier access.

--- a/docs/improvement/v0.10.1_plan.md
+++ b/docs/improvement/v0.10.1_plan.md
@@ -8,10 +8,10 @@ questions needed to satisfy the release gate.
 ## Source references reviewed
 
 - Release task list: `docs/improvement/RELEASE_PLAN_v1.md` (v0.10.1 section + ADR status appendix).
-- ADRs: `docs/improvement/adrs/ADR-005-explanation-json-schema-versioning.md`,
+-- ADRs: `docs/improvement/adrs/ADR-005-explanation-json-schema-versioning.md`,
   `ADR-007-visualization-abstraction-layer.md`, `ADR-014-plot-plugin-strategy.md`,
-  `ADR-016-plot-spec-separation.md`, `ADR-024-legacy-plot-input-contracts.md`,
-  `ADR-025-legacy-plot-rendering-semantics.md`, `ADR-018-code-documentation-standard.md`.
+  `ADR-016-plot-spec-separation.md`, `ADR-018-code-documentation-standard.md`,
+  `ADR-006-plugin-registry-trust-model.md`, `ADR-010-core-vs-evaluation-split-and-distribution.md`, `ADR-012-documentation-and-gallery-build-policy.md`.
 - PlotSpec docs: `docs/improvement/plot_spec/PLOTSPEC_SCHEMA.md`,
   `docs/improvement/plot_spec/PRIMITIVES_SCHEMA.md`.
 - Anti-pattern remediation: `docs/improvement/ANTI_PATTERN_REMEDIATION_PLAN.md`.
@@ -19,67 +19,49 @@ questions needed to satisfy the release gate.
 
 ---
 
-## 1) ADR-005 Explanation envelope & schema contract
+## 1) ADR-005 Explanation payload schema contract
 
-**Goal:** Replace the legacy flat JSON payload with the ADR-005 envelope and
-ship a validation + fixture refresh while preserving backward compatibility for
-existing exports/imports.
+**Goal:** Confirm the v1.0.0 payload schema as the canonical JSON contract and
+ship a validation + fixture/doc refresh aligned to the existing serializer.
 
 **Key ADR gaps to close (from ADR-005 appendix):**
-- Envelope absent, no `type` registry, missing `generator.parameters_hash`.
-- `validate_payload` not enforcing envelope semantics.
-- `schema_version` optional and docs/fixtures still describe the legacy shape.
+- Docs and fixtures still describe legacy shapes instead of the v1 payload.
+- `validate_payload` only checks JSON Schema; semantic invariants rely on serializers.
+- Schema version is recommended but not consistently documented.
 
 **Implementation steps**
-1. **Introduce a versioned envelope model and registry.**
-   - Add a new envelope schema directory (e.g., `src/calibrated_explanations/schemas/v1/`) with:
-     - a top-level envelope schema (type, generator, meta, payload).
-     - per-type payload schemas (`feature_attribution`, `interval`, `global_importance`,
-       `calibration_diagnostics`) referenced by the envelope.
-   - Add a registry of explanation `type` discriminants (new module, e.g.
-     `src/calibrated_explanations/schema/registry.py`) to map `type` to schema
-     file names and to validate allowable values.
+1. **Confirm the payload schema as the v1 contract.**
+   - Keep `src/calibrated_explanations/schemas/explanation_schema_v1.json` as the
+     authoritative schema for instance-level explanations.
+   - Document `provenance` and `metadata` as optional extension points for runtime
+     context without enforcing a dedicated envelope.
 
-2. **Update serialization to emit the envelope while keeping legacy adapters.**
-   - Extend `src/calibrated_explanations/serialization.py` to build the ADR-005
-     envelope (`schema_version`, `type`, `explanation_type`, `generator`, `meta`,
-     `payload`).
-   - Introduce a new helper to compute `generator.parameters_hash` based on
-     the explainer/config state (e.g., hashing `CalibratedExplainer` metadata,
-     feature list, bins, threshold). Store in `generator.parameters_hash`.
-   - Keep legacy flat payload exporters for compatibility and ensure
-     `ExportedExplanationCollection.to_json()` in
-     `src/calibrated_explanations/explanations/explanations.py` can emit either
-     legacy or envelope depending on an opt-in flag (default to new envelope for
-     v0.10.1).
+2. **Align validation helpers to payload semantics.**
+   - Ensure `calibrated_explanations.schema.validate_payload` remains focused on the
+     payload schema with optional `jsonschema`.
+   - Keep serialization-time interval invariants (`low <= predict <= high`) as the
+     semantic checks.
 
-3. **Align validation helpers with the envelope.**
-   - Update `src/calibrated_explanations/schema/validation.py` and the
-     re-export in `src/calibrated_explanations/serialization.py` to validate
-     the envelope schema rather than the flat v1 payload.
-   - Enforce `schema_version` as required and semver-validated.
-
-4. **Update docs + fixtures.**
-   - Update `docs/schema_v1.md` to reflect the envelope fields and the
-     per-type payload routing; add a section describing `generator` and `meta`.
-   - Refresh fixtures/tests in `tests/` that reference the old flat schema,
-     including round-trip tests (`tests/test_serialization_and_quick.py`).
+3. **Update docs + fixtures.**
+   - Update `docs/schema_v1.md` to reflect the payload fields and recommended
+     `schema_version` usage.
+   - Refresh fixtures/tests that still document or assume the legacy schema shape.
 
 **Decisions**
-- Make the ADR-005 envelope the default for `CalibratedExplanations.to_json` in v0.10.1;
-  keep legacy export only as an explicit opt-in compatibility path.
-- Compute `generator.parameters_hash` from deterministic, non-sensitive configuration
-  inputs plus core library versions to improve reproducibility without leaking data.
-- Version schemas under `schemas/v1/` and treat the legacy flat schema as deprecated
-  (remove it from the primary schema path for v0.10.1).
-- Make the envelope carry an optional audit/provenance block (correlation_id, policy_version, environment) so exports are self-describing. Optional block with fixed keys; default empty.
-- 
+- Preserve the payload-only contract for v1.0.0; defer envelopes and type registries.
+- Keep `schema_version` recommended but not required for v1 payloads.
+- Treat `provenance` and `metadata` as the stable extension surface for optional
+  runtime context.
+
+**Open questions**
+- Should v2 make `schema_version` required and enforce semver at validation time?
+- Do we want to formalize a minimal set of `provenance` keys once external consumers
+  stabilize?
 
 **Verification checklist**
-- New envelope fixtures validate via `jsonschema`.
-- Round-trip tests pass for legacy-to-envelope and envelope-to-domain flows.
-- `validate_payload` rejects missing/invalid `type`, `schema_version`, or
-  `generator.parameters_hash`.
+- Payload fixtures validate via `jsonschema`.
+- Round-trip tests pass for payload-only serialization.
+- Interval invariants are enforced during serialization.
 
 ---
 
@@ -192,50 +174,22 @@ CLI tooling, and docs.
 
 ---
 
-## 4) ADR-024 + ADR-025 legacy plotting alignment
+## 4) Legacy plotting maintenance (ADR-024/ADR-025 superseded)
 
-**Goal:** Bring legacy plotting helpers into full contract compliance and add
-missing coverage for rendering semantics and guardrails.
-
-**Key ADR gaps to close**
-- `_plot_global` ignores `show=False` and lacks save parameters.
-- Regression plots lack symmetric axes / interval backdrop behaviors.
-- Matplotlib guard allows silent skips; missing tests for warnings/one-sided.
+**Goal:** Maintain legacy plotting reference and ensure any remaining legacy issues are addressed via the maintenance reference, as ADR-024 and ADR-025 have been deprecated and superseded by `docs/maintenance/legacy-plotting-reference.md`.
 
 **Implementation steps**
-1. **Fix input contracts in legacy plotting.**
-   - Update `_plot_global` in `src/calibrated_explanations/legacy/plotting.py` to:
-     - honor `show=False` (avoid `plt.show()` in headless mode),
-     - accept `path/title/save_ext` with the same concatenation rules as other
-       helpers, and
-     - call `__require_matplotlib()` only when `show=True` or save output is
-       requested.
-
-2. **Restore rendering semantics.**
-   - Reinstate symmetric x-axis enforcement for regression plots
-     (`_plot_regression`) and ensure interval backdrops (`fill_betweenx`)
-     are drawn when required.
-   - Re-enable interval backdrop for regression and alternative plots to match
-     ADR-025 section details.
-
-3. **Matplotlib guard and warnings.**
-   - Ensure guard checks raise when Matplotlib is missing but output is
-     requested (`show=True` or `path/title` present).
-   - Add explicit tests for one-sided interval warnings and for `show=False`
-     behavior to prevent regressions.
+1. **Update maintenance reference.** Ensure `docs/maintenance/legacy-plotting-reference.md` captures all legacy plotting details for maintainers.
+2. **Retire ADR gaps.** Since ADRs are superseded, no new implementation for the listed gaps; legacy code remains the source of truth.
+3. **Test legacy paths.** Continue testing legacy plotting to prevent regressions, but do not enforce new contracts beyond what's in the code.
 
 **Decisions**
-- Update `_plot_global` to accept `path`/`title` parameters directly for consistent
-  save behavior with other helpers.
-- Do not add a compatibility flag for interactive-only `plt.show()` side effects;
-  default to headless-safe behavior when `show=False`.
-- Prefer semantic-only plotting tests for CI stability; avoid golden-image tests
-  unless absolutely necessary.
-- Make legacy plotting writes default to temp/working dir and add a config flag to enforce a required allowlisted base paths with validation to prevent leakage of regulated data. 
+- Legacy plotting contracts and semantics are now documented in the maintenance reference only.
+- No changes to enforce ADR-024/ADR-025 requirements; focus on stability.
 
 **Verification checklist**
-- Legacy plotting matches ADR-024/ADR-025 behaviors.
-- New/updated tests cover `_plot_global` headless mode and save behavior.
+- Maintenance reference is up-to-date.
+- Legacy plotting tests pass without new assertions from deprecated ADRs.
 
 ---
 
