change some ADRs into engineering standards
- turn ADRs 017, 018, 019, and 0.27 into standards and update all references

--- a/docs/improvement/v0.10.1_plan.md
+++ b/docs/improvement/v0.10.1_plan.md
@@ -1,7 +1,7 @@
 # v0.10.1 Release Task Implementation Plan
 
 This plan expands the v0.10.1 tasks from `docs/improvement/RELEASE_PLAN_v1.md` with
-implementation details grounded in ADRs and current code layout. Each section
+implementation details grounded in ADRs, engineering standards, and current code layout. Each section
 lists the concrete work items, impacted modules, verification steps, and open
 questions needed to satisfy the release gate.
 
@@ -10,7 +10,7 @@ questions needed to satisfy the release gate.
 - Release task list: `docs/improvement/RELEASE_PLAN_v1.md` (v0.10.1 section + ADR status appendix).
 -- ADRs: `docs/improvement/adrs/ADR-005-explanation-json-schema-versioning.md`,
   `ADR-007-visualization-abstraction-layer.md`, `ADR-014-plot-plugin-strategy.md`,
-  `ADR-016-plot-spec-separation.md`, `ADR-018-code-documentation-standard.md`,
+  `ADR-016-plot-spec-separation.md`, `docs/standards/STD-018-code-documentation-standard.md`,
   `ADR-006-plugin-registry-trust-model.md`, `ADR-010-core-vs-evaluation-split-and-distribution.md`, `ADR-012-documentation-and-gallery-build-policy.md`.
 - PlotSpec docs: `docs/improvement/plot_spec/PLOTSPEC_SCHEMA.md`,
   `docs/improvement/plot_spec/PRIMITIVES_SCHEMA.md`.
@@ -193,7 +193,7 @@ CLI tooling, and docs.
 
 ---
 
-## 5) ADR-018 docstrings for dynamic visualization classes
+## 5) Standard-018 docstrings for dynamic visualization classes
 
 **Goal:** Close the remaining docstring gap for dynamically generated classes
 used in plot plugin composition.
@@ -213,7 +213,7 @@ used in plot plugin composition.
 **Decisions**
 - Introduce a named combined plugin wrapper class in `plugins/plots.py` to improve
   clarity and docstring linting.
-- Update ADR-018 tracking artifacts (baseline docstring report) when the registry
+- Update Standard-018 tracking artifacts (baseline docstring report) when the registry
   implementation changes.
 
 **Verification checklist**
