Add anti-pattern analysis scripts for private member usage in tests
- Introduced `analyze_private_methods.py` to identify private method definitions and their usage across the codebase.
- Created `scan_private_usage.py` to scan test files for private member calls and categorize them based on analysis data.
- Developed `summarize_analysis.py` to provide a summary of anti-patterns found in the codebase.
- Implemented `generate_triage_report.py` to generate a prioritized report for remediation actions based on private member usage.
- Added `detect_test_anti_patterns.py` to identify various test anti-patterns using AST analysis.
- Created `find_shared_helpers.py` to locate private test helpers defined in multiple files.
- Enhanced documentation in `README.md` to outline the purpose and usage of the new scripts.

--- a/docs/improvement/v0.10.1_plan.md
+++ b/docs/improvement/v0.10.1_plan.md
@@ -262,32 +262,37 @@ without breaking existing APIs, and capture export telemetry.
 
 ---
 
-## 7) Anti-pattern remediation Phase 2 (Category A)
+## 7) Anti-pattern remediation Phase 2 (Pattern 2 & 3)
 
-**Goal:** Refactor tests that call private methods to use public APIs and remove
-any dead private helpers uncovered during the refactor.
+**Goal:** Remediate Pattern 2 (Test Utilities) and Pattern 3 (Dead Code) before
+addressing Category A (Internal Logic) to reduce noise and simplify the codebase.
 
 **Implementation steps**
-1. **Inventory Category A calls.**
-   - Add/extend a scan script (e.g., `scripts/scan_private_usage.py`) to
-     enumerate private-member usage under `tests/` and group by symbol name.
-   - Prioritize Category A calls (internal logic testing) for v0.10.1.
+1. **Inventory Pattern 2 & 3 candidates.**
+   - Use `scripts/anti-pattern-analysis/analyze_private_methods.py` to generate a fresh report.
+   - Identify "Pattern 3 (Completely Dead)" and "Pattern 3/2 (Only Tests)" for removal.
+   - Identify "Pattern 2 (Shared Test Utility)" for renaming/moving.
 
-2. **Refactor tests to public APIs.**
+2. **Remediate Pattern 3 (Dead Code).**
+   - Remove library private methods that are completely unused or only used by
+     tests (after verifying no runtime usage).
+   - Delete associated tests if they only test the removed private method.
+
+3. **Remediate Pattern 2 (Test Utilities).**
+   - Rename test helpers (remove leading `_`) and move them to `tests/helpers/`
+     if shared across multiple test files.
+   - Update all call sites in tests.
+
+4. **Inventory Category A calls.**
+   - Enumerate remaining private-member usage under `tests/` (Pattern 1).
+
+5. **Refactor tests to public APIs (Category A).**
    - Update tests to use `CalibratedExplainer` / `WrapCalibratedExplainer`
      public methods rather than direct private access.
-   - If a test requires a private-only state, either expose a public factory
-     (non-underscore) or update the test to reach the state via a supported
-     workflow.
 
-3. **Remove dead code.**
-   - Delete private methods that are only referenced by tests (after verifying
-     no runtime usage).
-   - Add replacement tests that cover the same behavior through public APIs.
-
-4. **Enforce and validate.**
-   - Add a CI guard (lint/test step) to prevent new private-member usage in
-     tests.
+6. **Enforce and validate.**
+   - Update `.github/private_member_allowlist.json`.
+   - Add a CI guard to prevent new private-member usage in tests.
 
 **Decisions**
 - Use a targeted allowlist with explicit expiry dates for the CI guard during
