feat: anti-pattern remediation continues with final pattern 2 violations
- Renamed private helper functions to follow a consistent naming convention, changing prefixes from `_` to `make_` or `serialize_` for better readability.
- Updated internal variable names in test classes to enhance clarity, replacing `_` prefixes with more descriptive names.
- Adjusted the structure of several test cases to improve maintainability and understanding.
- Ensured consistent usage of helper functions across various test files to reduce redundancy.
- Made minor adjustments to comments for better documentation of the code's purpose.

--- a/docs/improvement/v0.10.1_plan.md
+++ b/docs/improvement/v0.10.1_plan.md
@@ -268,23 +268,27 @@ without breaking existing APIs, and capture export telemetry.
 addressing Category A (Internal Logic) to reduce noise and simplify the codebase.
 
 **Implementation steps**
-1. **Inventory Pattern 2 & 3 candidates.**
+1. **Inventory Pattern 2 & 3 candidates.** [DONE]
    - Use `scripts/anti-pattern-analysis/analyze_private_methods.py` to generate a fresh report.
    - Identify "Pattern 3 (Completely Dead)" and "Pattern 3/2 (Only Tests)" for removal.
    - Identify "Pattern 2 (Shared Test Utility)" for renaming/moving.
 
-2. **Remediate Pattern 3 (Dead Code).**
+2. **Remediate Pattern 3 (Dead Code).** [DONE]
    - Remove library private methods that are completely unused or only used by
      tests (after verifying no runtime usage).
    - Delete associated tests if they only test the removed private method.
 
-3. **Remediate Pattern 2 (Test Utilities).**
+3. **Remediate Pattern 2 (Test Utilities).** [DONE]
    - Rename test helpers (remove leading `_`) and move them to `tests/helpers/`
      if shared across multiple test files.
    - Update all call sites in tests.
+   - Note: Name-mangled members (e.g., `_CalibratedExplainer__initialized`) are
+     deferred to Pattern 1 remediation as they represent library internals.
 
-4. **Inventory Category A calls.**
+4. **Inventory Category A calls.** [IN PROGRESS]
    - Enumerate remaining private-member usage under `tests/` (Pattern 1).
+   - Classify Category A calls by severity/complexity for phased refactoring.
+   - Prioritize targets that block other work or have high maintenance cost.
 
 5. **Refactor tests to public APIs (Category A).**
    - Update tests to use `CalibratedExplainer` / `WrapCalibratedExplainer`
@@ -303,7 +307,9 @@ addressing Category A (Internal Logic) to reduce noise and simplify the codebase
   refactors, avoiding scope creep.
 
 **Verification checklist**
-- Category A tests no longer call private members.
+- Pattern 3 (Dead Code) count is 0. [DONE]
+- Pattern 2 (Test Utilities) count is 0 (excluding name-mangled internals). [DONE]
+- Category A tests no longer call private members. [IN PROGRESS]
 - Coverage remains unchanged or improves.
 
 ---
