feat: preparing anti pattern 1 remediation plan

--- a/docs/improvement/v0.10.1_plan.md
+++ b/docs/improvement/v0.10.1_plan.md
@@ -285,21 +285,22 @@ addressing Category A (Internal Logic) to reduce noise and simplify the codebase
    - Note: Name-mangled members (e.g., `_CalibratedExplainer__initialized`) are
      deferred to Pattern 1 remediation as they represent library internals.
 
-4. **Inventory Category A calls.** [IN PROGRESS]
+4. **Inventory Category A calls.** [DONE]
    - Enumerate remaining private-member usage under `tests/` (Pattern 1).
    - Classify Category A calls by severity/complexity for phased refactoring.
    - Prioritize targets that block other work or have high maintenance cost.
+   - Created detailed [Pattern 1 Remediation Plan](PATTERN_1_REMEDIATION_PLAN.md).
 
-5. **Refactor tests to public APIs (Category A).**
+5. **Refactor tests to public APIs (Category A).** [IN PROGRESS]
    - Update tests to use `CalibratedExplainer` / `WrapCalibratedExplainer`
      public methods rather than direct private access.
 
-6. **Enforce and validate.**
-   - Update `.github/private_member_allowlist.json`.
+6. **Enforce and validate.** [IN PROGRESS]
+   - Updated `.github/private_member_allowlist.json` with 93 baseline entries.
    - Add a CI guard to prevent new private-member usage in tests.
 
 **Decisions**
-- Use a targeted allowlist with explicit expiry dates for the CI guard during
+- Use a targeted allowlist with explicit expiry versions for the CI guard during
   Category A remediation to prevent regressions without blocking unrelated work.
 - Permit temporary waivers only when tracked with an explicit expiry aligned to a
   release gate.
