--- a/notebooks/demo_plugin_wiring.ipynb
+++ b/notebooks/demo_plugin_wiring.ipynb
@@ -39,7 +39,7 @@
      "output_type": "stream",
      "text": [
       "✓ Libraries imported successfully\n",
-      "✓ Calibrated Explanations version: v0.10.0\n"
+      "✓ Calibrated Explanations version: v0.10.1\n"
      ]
     }
    ],
@@ -117,6 +117,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Explainer created with plot_style='plot_spec.default'\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -125,11 +132,14 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Explainer created with plot_style='plot_spec.default'\n",
-      "  Internal plot style chain: ('plot_spec.default', 'legacy')\n"
+     "ename": "AttributeError",
+     "evalue": "'CalibratedExplainer' object has no attribute '_plot_style_chain'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 14\u001b[0m\n\u001b[0;32m      2\u001b[0m explainer_a \u001b[38;5;241m=\u001b[39m CalibratedExplainer(\n\u001b[0;32m      3\u001b[0m     model,\n\u001b[0;32m      4\u001b[0m     X_cal,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# (factual_plugin, alternative_plugin, default_interval_plugin also supported)\u001b[39;00m\n\u001b[0;32m     11\u001b[0m )\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m✓ Explainer created with plot_style=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplot_spec.default\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Internal plot style chain: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mexplainer_a\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_plot_style_chain\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'CalibratedExplainer' object has no attribute '_plot_style_chain'"
      ]
     }
    ],
@@ -152,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fa34173b",
    "metadata": {},
    "outputs": [
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "32303e2c",
    "metadata": {},
    "outputs": [
@@ -219,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2fbaac93",
    "metadata": {},
    "outputs": [
@@ -250,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b8c96fbc",
    "metadata": {},
    "outputs": [
@@ -286,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "853a50b5",
    "metadata": {},
    "outputs": [
@@ -332,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "082add0f",
    "metadata": {},
    "outputs": [
@@ -359,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a31d4df7",
    "metadata": {},
    "outputs": [
@@ -389,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f3e2b59b",
    "metadata": {},
    "outputs": [
@@ -432,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "fece0c1b",
    "metadata": {},
    "outputs": [
@@ -472,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f5d6ce69",
    "metadata": {},
    "outputs": [
@@ -496,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b8c4726b",
    "metadata": {},
    "outputs": [
@@ -534,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "063fe1a0",
    "metadata": {},
    "outputs": [
@@ -584,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "169ade9d",
    "metadata": {},
    "outputs": [
@@ -625,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6e5ea523",
    "metadata": {},
    "outputs": [
@@ -669,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "17b7e972",
    "metadata": {},
    "outputs": [
@@ -698,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "858d2a15",
    "metadata": {},
    "outputs": [
@@ -742,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ef34b97f",
    "metadata": {},
    "outputs": [
