feat: Add new ADRs and a standard for logging and fast feature filtering, with updated v0.10.2 plans

--- a/docs/improvement/v0.10.2_plan.md
+++ b/docs/improvement/v0.10.2_plan.md
@@ -13,7 +13,11 @@ verification steps, and open questions needed to satisfy the release gate.
   `docs/improvement/adrs/ADR-013-interval-calibrator-plugin-strategy.md`,
   `docs/improvement/adrs/ADR-015-explanation-plugin.md`,
   `docs/improvement/adrs/ADR-021-calibrated-interval-semantics.md`,
-  `docs/improvement/adrs/ADR-026-explanation-plugin-semantics.md`.
+  `docs/improvement/adrs/ADR-026-explanation-plugin-semantics.md`,
+  `docs/improvement/adrs/ADR-027-fast-feature-filtering.md`,
+  `docs/improvement/adrs/ADR-028-logging-and-governance-observability.md`.
+- Standards: `docs/standards/STD-005-logging-and-observability-standard.md`.
+- Logging analysis: `docs/improvement/ignore/Logging_Analysis.md`.
 - Anti-pattern remediation guidance: `docs/improvement/ANTI_PATTERN_REMEDIATION_PLAN.md`,
   `docs/improvement/PATTERN_1_REMEDIATION_PLAN.md`.
 - Packaging/evaluation docs: `pyproject.toml`, `evaluation/README.md`.
@@ -509,3 +513,85 @@ regressions, per the remediation plan.
 **Verification checklist**
 - No private member usage detected across `tests/`.
 - CI fails on any new private member usage without allowlist exemptions.
+
+---
+
+## 7) ADR-027 finalization (FAST-based feature filtering)
+
+**Goal:** Complete the implementation of ADR-027 by aligning runtime logging with the observability policy, documenting per-instance ignore masks metadata, and providing performance tuning examples, in a way that is consistent with ADR-028 and Standard-005.
+
+**Key ADR follow-ups to close (ADR-027 + ADR-028/Standard-005 alignment):**
+- Runtime logging not aligned with debug-by-default policy.
+- Governance vs operational logging domains not consistently applied for feature filter events.
+- Per-instance ignore masks metadata not documented.
+- No performance tuning examples provided.
+
+**Implementation steps**
+1. **Align runtime logging with observability policy and ADR-028.**
+   - Update `core.explain._feature_filter` and related logging in `plugins.builtins` to emit at debug level by default, using the appropriate domain logger (`calibrated_explanations.core.*` for operational events).
+   - For governance-relevant filter events (for example, strict observability mode decisions that materially change behaviour), emit additional governance logs via `calibrated_explanations.governance.*` where appropriate.
+   - Add a strict observability mode config hook (e.g., `CE_STRICT_OBSERVABILITY`) to emit warnings on filter errors or skips, with structured fields populated via the shared logging context helper defined in ADR-028.
+
+2. **Document metadata exposure for per-instance ignore masks.**
+   - Update explanation collection docs to describe the best-effort metadata for per-instance masks.
+   - Add transparency notes in advanced user guides for debugging filtered explanations.
+
+3. **Provide examples in performance tuning and governance documentation.**
+   - Extend `docs/practitioner/performance-tuning.md` (or create if needed) with examples of using feature filtering for large feature spaces, including sample logs that respect Standard-005 (domains, levels, and data minimisation).
+   - Include telemetry event examples for `filter_enabled`, `filter_skipped`, and `filter_error`, and show how governance logs from ADR-028 can be routed separately from core runtime logs.
+
+**Decisions**
+- Keep filtering experimental and opt-in, with clear documentation on configuration precedence.
+
+**Open questions**
+1. **Where to document performance tuning examples?**
+   - **Suggestion A:** Extend existing practitioner docs.
+     - **Pros:** Keeps tuning info with user-facing guides.
+     - **Cons:** Might clutter if not widely used.
+   - **Suggestion B:** Add to contributor docs as advanced optimization.
+     - **Pros:** Targets advanced users.
+     - **Cons:** Less discoverable for practitioners.
+   - **Decision:** **A**, to support performance-conscious practitioners.
+
+**Verification checklist**
+- Logging emits at debug level by default, with warnings only in strict mode.
+- Governance vs core logging domains are correctly applied for feature filter events.
+- Documentation includes metadata exposure and tuning examples that follow Standard-005.
+- Telemetry events are emitted for filter states. 
+
+---
+
+## 8) ADR-028 and Standard-005 enforcement (logging & governance observability)
+
+**Goal:** Apply ADR-028 and Standard-005 to v0.10.2-scope changes so that logging and governance observability are consistent across core, plugins, and governance surfaces touched by this release.
+
+**Key follow-ups to close:**
+- Logger usage in core, plugins, and feature-filter paths is not yet aligned with the domain-based hierarchy (`core.*`, `plugins.*`, `telemetry.*`, `governance.*`).
+- No shared context helper is wired into v0.10.2 surfaces to propagate explainer/checkpoint/plugin/tenant identifiers into logs.
+- Governance-relevant events (e.g. plugin trust/deny, strict observability mode decisions) are not consistently emitted via governance loggers.
+
+**Implementation steps**
+1. **Normalize logger domains for v0.10.2-affected modules.**
+   - For modules touched by v0.10.2 work items (plugin registry/manager, interval/explanation orchestration, feature filtering, packaging-related governance surfaces), ensure loggers are named under the correct domains per ADR-028 (`calibrated_explanations.core.*`, `calibrated_explanations.plugins.*`, `calibrated_explanations.telemetry.*`, `calibrated_explanations.governance.*`).
+   - Replace ad-hoc logger instantiation in these modules with a consistent pattern (`logging.getLogger(__name__)` where the module path already reflects the domain, or explicit domain names otherwise).
+
+2. **Introduce and wire the shared logging context helper.**
+   - Implement the shared logging context helper and filter described in ADR-028 (e.g. a small `calibrated_explanations.logging` utility).
+   - At minimum, instrument the following entry points in v0.10.2 scope to set context fields (explainer ID, plugin identifier, checkpoint ID where applicable):
+     - Plugin resolution/trust paths targeted by ADR-006/ADR-015.
+     - Interval orchestration paths targeted by ADR-013.
+     - Feature filter and FAST paths targeted by ADR-027.
+   - Ensure that governance log records emitted from these paths carry the relevant context via the filter.
+
+3. **Tag governance vs operational events explicitly.**
+   - For plugin trust/deny and configuration decisions (ADR-006/ADR-015), emit governance logs under `calibrated_explanations.governance.plugins` (or similar) in addition to any operational logs.
+   - For optional-dependency and packaging compliance surfaces where governance is involved (for example, enforcement of core vs extras per ADR-010), emit governance logs when configuration changes or policy decisions are made.
+
+4. **Update documentation and examples.**
+   - Update `docs/foundations/governance/optional_telemetry.md` to reference the new logging domains and context helper.
+   - Reference Standard-005 and ADR-028 from contributor and practitioner docs where logging examples are shown.
+
+**Verification checklist**
+- v0.10.2-touched modules use loggers under the correct `calibrated_explanations.*` domains.
+- The shared logging context helper is present and propagates identifiers into logs for core plugin/trust/interval/filter flows.
+- Governance-relevant events for v0.10.2 tasks emit logs via `calibrated_explanations.governance.*` with structured fields, and examples in docs conform to Standard-005.
