feat: Add ADR-029 for reject integration strategy decisions and documentation

--- a/docs/improvement/v0.10.2_plan.md
+++ b/docs/improvement/v0.10.2_plan.md
@@ -14,6 +14,7 @@ verification steps, and open questions needed to satisfy the release gate.
   `docs/improvement/adrs/ADR-015-explanation-plugin.md`,
   `docs/improvement/adrs/ADR-021-calibrated-interval-semantics.md`,
   `docs/improvement/adrs/ADR-026-explanation-plugin-semantics.md`,
+  `docs/improvement/adrs/ADR-029-reject-integration-strategy.md`,
   `docs/improvement/adrs/ADR-027-fast-feature-filtering.md`,
   `docs/improvement/adrs/ADR-028-logging-and-governance-observability.md`.
 - Standards: `docs/standards/STD-005-logging-and-observability-standard.md`.
@@ -595,3 +596,44 @@ regressions, per the remediation plan.
 - v0.10.2-touched modules use loggers under the correct `calibrated_explanations.*` domains.
 - The shared logging context helper is present and propagates identifiers into logs for core plugin/trust/interval/filter flows.
 - Governance-relevant events for v0.10.2 tasks emit logs via `calibrated_explanations.governance.*` with structured fields, and examples in docs conform to Standard-005.
+
+---
+
+## 9) ADR-029 reject integration strategy (documentation decisions)
+
+**Goal:** Publish the reject integration ADR decisions, capture deferred strategy/visualization questions, and document follow-up alternatives without changing runtime behavior.
+
+**Implementation steps**
+1. Ensure ADR-029 reflects the final decisions:
+   - A3: Policy Enum for invocation (explicit behavior, flexible integration).
+   - C3: structured wrapper/envelope for output integration (reject-aware outputs).
+   - B2: internal registry for strategy extensibility.
+   - D1: no visualization integration.
+2. Record open questions and alternatives for strategy extensibility (B2) and visualization so future iterations can make an informed choice.
+3. Link ADR-029 from the v0.10.2 release milestone in `RELEASE_PLAN_v1.md`.
+
+**Decisions (resolved for v0.10.2)**
+1. Invocation model: **A3 (Policy Enum)**.
+2. Output integration: **C3 (Structured Wrapper)**.
+
+**Decisions (sequenced)**
+1. Strategy extensibility: adopt B2 (registry) only.
+2. Visualization integration: D1 (no visualization integration).
+
+**Open questions and alternatives (for follow-up)**
+1. **Invocation model**
+   - Define `RejectPolicy` enum members (e.g., `NONE`, `SUBMIT`).
+2. **Output integration**
+   - Define structure of `RejectResult` envelope.
+3. **Strategy extensibility model**
+   - **B2:** Registry inside `RejectOrchestrator`.
+     - **Pros:** Lightweight; minimal infrastructure.
+     - **Cons:** Less alignment with plugin architecture.
+   - **Recommendation:** Adopt B2.
+
+**Verification checklist**
+- ADR-029 published with updated decisions, dates, and open questions.
+- v0.10.2 release plan references ADR-029.
+
+**Future direction (out of scope for v0.10.2)**
+- Define registry interfaces (selection, lifecycle hooks, telemetry).
